--- a/pfbackupNG/pfbackupNG.csproj
+++ b/pfbackupNG/pfbackupNG.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Storage.Blobs" Version="12.9.0-beta.3" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.0-preview.3.21201.4" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Systemd" Version="6.0.0-preview.3.21201.4" />
     <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="6.0.0-preview.3.21201.4" />
